...
                BasicTextField(
                    value = commentContent,
                    onValueChange = {
                        if (it.length <= 200) commentContent = it
                    },
                    modifier = Modifier
                        .testTag("CommentInput")
                        .fillMaxWidth(),
                    decorationBox = { innerTextField ->
                        Box(
                            modifier = Modifier
                                .fillMaxWidth()
                                .height(150.dp)
...
                enabled = commentContent.isNotBlank() && rating > 0,
                colors = ButtonDefaults.buttonColors(
                    if (commentContent.isNotBlank() && rating > 0) MaterialTheme.colorScheme.primary else Color.Gray
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("SubmitCommentButton")
            ) {
                Text("Comentar")
            }

            Spacer(modifier = Modifier.height(16.dp))

...
